--- a/analiseficha.html
+++ b/analiseficha.html
@@ -569,9 +569,9 @@ async function abrirModal(p){
   mBody.innerHTML = `
     <h2>${p.nome}</h2>
 
-    <p><b>CMV base:</b> ${moeda(cmvBase)}</p>
+    <p><b>CUSTO BASE:</b> ${moeda(cmvBase)}</p>
     <p><b>Impostos / Custos:</b> ${moeda(totalImpostos)}</p>
-    <p><b>CMV final:</b> ${moeda(cmvFinal)}</p>
+    <p><b>CUSTO FINAL:</b> ${moeda(cmvFinal)}</p>
 
     <hr>
 
