--- a/analiseficha.html
+++ b/analiseficha.html
@@ -570,7 +570,7 @@ async function abrirModal(p){
     <h2>${p.nome}</h2>
 
     <p><b>CUSTO BASE:</b> ${moeda(cmvBase)}</p>
-    <p><b>Impostos / Custos:</b> ${moeda(totalImpostos)}</p>
+    <p><b>IMPOSTOS E CUSTOS OPERCIONAIS:</b> ${moeda(totalImpostos)}</p>
     <p><b>CUSTO FINAL:</b> ${moeda(cmvFinal)}</p>
 
     <hr>
