--- a/analiseficha.html
+++ b/analiseficha.html
@@ -566,12 +566,30 @@ async function abrirModal(p){
   const lucro = precoVenda ? precoVenda - cmvFinal : 0;
   const margem = precoVenda ? (lucro/precoVenda)*100 : 0;
 
-  mBody.innerHTML = `
+   mBody.innerHTML = `
     <h2>${p.nome}</h2>
 
     <p><b>CUSTO BASE:</b> ${moeda(cmvBase)}</p>
     <p><b>IMPOSTOS E CUSTOS OPERCIONAIS:</b> ${moeda(totalImpostos)}</p>
     <p><b>CUSTO FINAL:</b> ${moeda(cmvFinal)}</p>
+
+    <hr>
+    <h3>Tipo do prato</h3>
+
+    <select id="tipoPrato">
+      <option value="">SELECIONE</option>
+      <option>PRATO PRINCIPAL</option>
+      <option>ENTRADA</option>
+      <option>SOBREMESA</option>
+      <option>DRINK</option>
+      <option>SUSHI</option>
+      <option>ACOMPANHAMENTO</option>
+    </select>
+
+    <button class="btn-add" style="margin-top:10px"
+      onclick="salvarTipoPrato()">
+      SALVAR CATEGORIA
+    </button>
 
     <hr>
 
@@ -594,46 +612,38 @@ async function abrirModal(p){
 
     <hr>
 
-<h3>Ingredientes</h3>
-${itens.map(i=>`
-  <div class="ing">
-    <span>
-      <b>${i.nome} — ${moeda(i.custo_unitario)}</b><br>
-      <small>${i.quantidade} ${i.unidade_uso}</small>
-    </span>
+    <h3>Ingredientes</h3>
+    ${itens.map(i=>`
+      <div class="ing">
+        <span>
+          <b>${i.nome} — ${moeda(i.custo_unitario)}</b><br>
+          <small>${i.quantidade} ${i.unidade_uso}</small>
+        </span>
 
-    <strong>${moeda(i.custo_calculado)}</strong>
+        <strong>${moeda(i.custo_calculado)}</strong>
 
-    <div style="display:flex;gap:6px">
-      <button class="btn-icon btn-edit"
-        onclick="editarIngrediente('${i.id}')">
-        ✏️
-      </button>
-
-      <button class="btn-icon btn-delete"
-        onclick="excluirIngrediente('${i.id}')">
-        🗑️
-      </button>
-    </div>
-  </div>
-`).join("")}
-
-
+        <div style="display:flex;gap:6px">
+          <button class="btn-icon btn-edit"
+            onclick="editarIngrediente('${i.id}')">✏️</button>
+          <button class="btn-icon btn-delete"
+            onclick="excluirIngrediente('${i.id}')">🗑️</button>
+        </div>
+      </div>
+    `).join("")}
 
     <div class="precificacao">
       <h3>Novo ingrediente</h3>
 
-<select id="ingProduto">
-  <option value="">Selecione</option>
-  ${ingredientesBase.map(i=>`
-    <option value="${i.id}"
-      data-custo="${i.valor}"
-      data-unidade="${i.unidade_medida}">
-      ${i.nome}
-    </option>
-  `).join("")}
-</select>
-
+      <select id="ingProduto">
+        <option value="">Selecione</option>
+        ${ingredientesBase.map(i=>`
+          <option value="${i.id}"
+            data-custo="${i.valor}"
+            data-unidade="${i.unidade_medida}">
+            ${i.nome}
+          </option>
+        `).join("")}
+      </select>
 
       <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
         <input id="ingQtd" type="number" step="0.001" placeholder="Quantidade">
@@ -641,9 +651,7 @@ ${itens.map(i=>`
       </div>
 
       <button class="btn-add" style="margin-top:10px"
-        onclick="salvarIngrediente()">
-        ADICIONAR INGREDIENTE
-      </button>
+        onclick="salvarIngrediente()">ADICIONAR INGREDIENTE</button>
     </div>
 
     <hr>
@@ -685,11 +693,16 @@ ${itens.map(i=>`
       <input id="impValor" type="number" step="0.01" placeholder="Valor">
 
       <button class="btn-add" style="margin-top:10px"
-        onclick="salvarImposto()">
-        ADICIONAR
-      </button>
+        onclick="salvarImposto()">ADICIONAR</button>
     </div>
   `;
+
+  setTimeout(() => {
+    const selectTipo = document.getElementById("tipoPrato");
+    if (selectTipo && p.tipo) {
+      selectTipo.value = p.tipo;
+    }
+  }, 0);
 
   setTimeout(()=>{
     markupPerc.oninput = ()=>{
@@ -697,7 +710,7 @@ ${itens.map(i=>`
       precoSugerido.value = moeda(cmvFinal * (1 + mk/100));
     };
   },50);
-}
+
 
 /* =====================================================
    AÇÕES
@@ -851,6 +864,25 @@ filtroNome.addEventListener("input", () => {
 filtroTipo.addEventListener("change", () => {
   renderLista();
 });
+
+
+   async function salvarTipoPrato(){
+  const tipo = tipoPrato.value;
+  if(!tipo) return alert("Selecione um tipo");
+
+  const { error } = await sb
+    .from("buffet")
+    .update({ tipo })
+    .eq("id", pratoAtual.id);
+
+  if(error){
+    alert("Erro ao salvar categoria");
+    return;
+  }
+
+  await carregarPratos();
+  abrirModal(pratos.find(p => p.id === pratoAtual.id));
+}
 
 </script>
 
