--- a/analiseficha.html
+++ b/analiseficha.html
@@ -711,6 +711,8 @@ async function abrirModal(p){
     };
   },50);
 
+} // ✅ FECHA abrirModal(p)
+
 
 /* =====================================================
    AÇÕES
