--- a/analiseficha.html
+++ b/analiseficha.html
@@ -623,7 +623,7 @@ if (p.ativo === false) {
         <span class="badge">Custo ${moeda(cmvFinal)}</span>
 
         ${totalImpostos > 0
-          ? `<span class="badge">Impostos ${moeda(totalImpostos)}</span>`
+          ? `<span class="badge">Operação ${moeda(totalImpostos)}</span>`
           : ``}
 
         ${p.preco_venda
